@@ -1,0 +1,8 @@
+[this]
+description="Integration tests"
+
+[via-xp]
+class="org.company.lib.common.integration.util.XpIntegrationTest"
+
+[via-php]
+class="org.company.lib.common.integration.util.PhpIntegrationTest"
