@@ -6,11 +6,6 @@
  */
 package net.xp_forge.maven.plugins.xp;
 
-import java.util.List;
-
-import org.apache.maven.artifact.Artifact;
-import org.apache.maven.project.MavenProject;
-
 import net.xp_forge.maven.plugins.xp.SvnDeployNoForkMojo;
 
 /**
@@ -26,17 +21,6 @@ import net.xp_forge.maven.plugins.xp.SvnDeployNoForkMojo;
 public class SvnDeployMojo extends SvnDeployNoForkMojo {
 
   /**
-   * The paralel Maven project that was forked before the "xp:svn-deploy" goal was executed
-   *
-   * We need this to get ${project.artifact} and ${project.attachedArtifacts}
-   *
-   * @parameter default-value="${executedProject}"
-   * @required
-   * @readonly
-   */
-  protected MavenProject executedProject;
-
-  /**
    * Get skip setting
    *
    * For a forked lifecycle, this is always false
@@ -46,27 +30,5 @@ public class SvnDeployMojo extends SvnDeployNoForkMojo {
   @Override
   protected boolean isSkip() {
     return false;
-  }
-
-  /**
-   * Get project main artifact
-   *
-   * For a forked lifecycle, get the artifact from ${executedProject}
-   *
-   */
-  @Override
-  protected Artifact getProjectArtifact() {
-    return this.executedProject.getArtifact();
-  }
-
-  /**
-   * Get project attached artifacts
-   *
-   * For a forked lifecycle, get the attached artifacts from ${executedProject}
-   *
-   */
-  @Override
-  protected List<Artifact> getProjectAttachedArtifacts() {
-    return this.executedProject.getAttachedArtifacts();
   }
 }
